# OPENAI-SDK-Pratice-Work

./: agent_hook_run.py  app.py  conversion.db  guard_run.py  handoff.py  handoff_run.py  hook_run.py  main.py  pyproject.toml  role.py  secure_session_chat.py  session_run.py  shoping_tool.py  tooling.py  trace_processor.py  tracing_pratice.py  tracing_run.py  tran_agent.py  weather_run.py
my_agent/: agent_hook.py  guard_agent.py  handoff_agent.py  role_agent.py  run_hook.py  run_hook_agent.py  session_agent.py  shopy_agent.py  simple_assistant.py  teacher_agent.py  tool_agent.py  tracing_agent.py  translate_as_tool_agent.py  weather_agent.py
my_config/: gemini_config.py  groq_config.py
my_data_type/: data_type.py
my_guardrails_fun/: input_guardrails_fun.py  output_guardrails_fun.py
my_hook/: my_agent_hook.py  my_run_hook.py
my_instruction/: dynamic_instruction.py  role_base_instruction.py
my_runner/: runner.py
my_service/: service_fun.py
my_tool/: fun_tool.py  my_tools.py  weather_tool.py
validators/: valid_tool.py
